result/0610-133541/stderr.log
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/main.c:36:5: warning: implicit declaration of function ‘dimension’ [-Wimplicit-function-declaration]
   36 |     dimension(configuration.filenames[0]);
      |     ^~~~~~~~~
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/main.c:53:5: error: too few arguments to function ‘print_pixel’
   53 |     print_pixel(configuration.filenames[0]);
      |     ^~~~~~~~~~~
In file included from /home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/main.c:9:
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/utils.h:28:6: note: declared here
   28 | void print_pixel(char *filename, int x, int y);
      |      ^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2